--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-2-local-storage": "^1.0.1",
+    "angular2-jwt": "^0.2.3",
     "aspect.js": "^0.3.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
