--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@swimlane/ngx-datatable": "^9.3.0",
     "angular-2-local-storage": "^1.0.1",
     "angular2-jwt": "^0.2.3",
     "aspect.js": "^0.3.2",
